<resources>
    <string name="app_name">MarvelProject</string>
    <string name="favoritos">Favorites</string>
    <string name="home">Home</string>
    <string name="description">asdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKK</string>
    <string name="title">Title</string>
    <string name="character_name_item">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Home-->
    <string name="txt_home_toolbar">Marvel</string>
    <!--Favoritos-->
    <string name="txt_favorites_toolbar">Favoritos</string>
    <string name="ic_search_toolbar">Search</string>
    <string name="connection_error">Erro de conexão!</string>
    <string name="verify_internet">Verifique sua internet e tente novamente.</string>
    <string name="confirm">Confirmar</string>
    <string name="dialogTitleDeleteCharacter">Confirmação</string>
    <string name="dialogMessageDeleteCharacter">Tem certeza que gostaria de deletar este personagem?</string>
    <string name="dialogButtonDeleteCharacter">Deletar</string>
    <string name="dialogButtonNotDeleteCharacter">Não</string>
    <string name="dialogTitleConnection">Erro de conexão</string>
    <string name="dialogMessageConnection">Verifique sua internet e tente novamente</string>
    <string name="dialogButtonConnection">Tentar novamente</string>
    <string name="dialogButtonNotConnection">Cancelar</string>
    <string name="user_hint">Usuário</string>
    <string name="password_hint">Senha</string>
    <string name="button_name_login">LOGIN</string>
    <string name="name_hint_account">Nome</string>
    <string name="email_hint_account">Email</string>
    <string name="confirme_email_hint_account">Confirme seu email</string>
    <string name="btn_back_account">VOLTAR</string>
    <string name="btn_confirm_account">CONFIRMAR</string>
    <string name="create_account_text">Crie sua conta</string>
    <string name="photo_text">ESCOLHA SUA FOTO</string>
    <string name="photo_subtitle_text">Definir mais tarde</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirme sua senha</string>
    <string name="welcome_title">Seja bem-vindo(A)</string>
    <string name="btn_welcome">Agora efetue seu login</string>
    <string name="text_password">Defina sua senha</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="small_password">Senha deve possuir 8 caracteres</string>
    <string name="create_your_account">Não tem uma conta? Registre-se</string>
    <string name="email_confirmation">Emails são diferentes</string>
    <string name="different_password">Senhas não são iguais</string>
    <string name="invalid_name">Digite um nome válido</string>
    <string name="string_price">Preço: $</string>
    <string name="string_pages">Númer de páginas: </string>
    <string name="string_date">Data de lançamento: </string>

</resources>