<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".view.login.activity.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:src="@drawable/logo_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintTop_toBottomOf="@id/login_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user_icon_hint"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:hint="@string/user_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:layout_constraintEnd_toEndOf="@id/login_username_layout"
        app:layout_constraintStart_toStartOf="@id/login_username_layout"
        app:layout_constraintTop_toBottomOf="@id/login_username_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:drawableStart="@drawable/password_icon_hint"
            android:drawablePadding="8dp"
            android:hint="@string/password_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:backgroundTint="#DA0910"
        android:elevation="4dp"
        android:text="@string/button_name_login"
        app:layout_constraintEnd_toEndOf="@id/login_password_layout"
        app:layout_constraintStart_toStartOf="@id/login_password_layout"
        app:layout_constraintTop_toBottomOf="@id/login_password_layout"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MarvelProject.Button.Cut"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="1.3"/>

</androidx.constraintlayout.widget.ConstraintLayout>